--- a/index.css
+++ b/index.css
@@ -32,6 +32,30 @@ body {
   box-shadow: 3px 4px #e04b52
 }
 
+.card img {
+  width: 100%;
+  height: auto;
+  object-fit: cover; /* scale the image to cover the entire container */
+}
+
+.card h2 {
+  margin-top: 10px;
+  font-size: 1.5rem;
+}
+
+.card p {
+  margin-top: 5px;
+  font-size: 1.2rem;
+}
+
+.card button {
+  padding: 10px;
+  background-color: #fff;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
 .toy-avatar {
   justify-self: center;
   height: 12rem;
